<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:src="@drawable/martin_doc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/article_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title" />

            <TextView
                android:id="@+id/article_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/description" />

            <TextView
                android:id="@+id/article_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clock_time"
                android:textColor="@color/gray" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>