<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pay_swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fahamutech.doctorapp.forum.PayActivity"
    tools:showIn="@layout/forum_activity_pay">


    <!--<WebView-->
    <!--android:id="@+id/pay_webview"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/pay_instruction"
                    android:textAlignment="center" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/pay_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_forum_call"
                        android:drawableStart="@drawable/ic_forum_call"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/pay_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_forum_add_message"
                        android:drawableStart="@drawable/ic_forum_add_message"
                        android:gravity="start"
                        android:hint="@string/message"
                        android:inputType="textMultiLine"
                        android:lines="5" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:id="@+id/confirm"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--confirm-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            app:contentPadding="8dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:text="@string/pay_confirm"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Button
                        android:layout_width="0dp"
                        android:text="@string/call"
                        android:id="@+id/pay_confirm_call"
                        android:drawableLeft="@drawable/ic_forum_call"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_forum_call" />

                    <Button
                        android:layout_width="0dp"
                        android:text="@string/message"
                        android:id="@+id/pay_confirm_message"
                        android:drawableLeft="@drawable/ic_forum_add_message"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_forum_add_message" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>